# GeniusNote

./: LICENSE  README.md  main.c
Client/socket/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  socketClient  socket_client.cpp  socket_client.h  testfile.cpp
Server/socket/: CMakeCache.txt  CMakeList.txt  CMakeLists.txt  Makefile  cmake_install.cmake  server_socket.cpp  server_socket.h  socket.cpp  socket.h  socketTest  testfile.cpp
Server/sqlite/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sqliet.cpp  sqliet.h  sqlite.cpp  sqlite.h  sqliteTest  testfile.cpp  testsqliet
